fix z-indexes

--- a/sass/elements/_intro.scss
+++ b/sass/elements/_intro.scss
@@ -6,8 +6,7 @@
   @include breakpoint-max(md) {
     background-color: palette(red, bg);
     padding-top: $line-height * 2;
-    position: relative;
-    z-index: 3;
+
 
     .column--1-3 {
       @include make-col(12);
@@ -15,13 +14,15 @@
 
       padding-top: 0;
       padding-bottom: 0;
+
     }
   }
 }
 .date {
   @include font(h3, $wt: normal);
-  z-index: 3;
+
   position: relative;
+  z-index: 99999;
 
   @include breakpoint-max(md) {
     color: palette(red, body);
@@ -52,7 +53,7 @@
 .title {
   text-align: center;
   color: palette(red, heading);
-  z-index: 1;
+  z-index: 0;
   position: relative;
   line-height: size(h1, lh) * 1.5;
   @include breakpoint-max(md) {
@@ -83,6 +84,53 @@
   letter-spacing: 10px;
 }
 
+.title::before {
+  width: 0;
+  height: 0;
+  border-top: 14em solid transparent;
+  border-bottom: 14em solid transparent;
+  border-right: 18em solid palette(red, bg);
+  //-moz-border-radius: 50%;
+  //-webkit-border-radius: 50%;
+  border-radius: 100%;
+  content: "";
+  display: inline-block;
+  position: absolute;
+  //outline: 5px solid blue;
+  z-index: -3;
+  //top: -455%; //1170px
+  //right: -200%; //1170px
+  top: -245%;
+  right: -143%;
+
+  @include breakpoint-max(md) {
+    content: none;
+  }
+}
+
+.title::after {
+  width: 0;
+  height: 0;
+  border-top: 16em solid transparent;
+  border-bottom: 16em solid transparent;
+  border-right: 20.5em solid palette(purple, bg);
+  border-radius: 100%;
+  content: "";
+  display: inline-block;
+  position: absolute;
+  //outline: 5px solid blue;
+  z-index: -4;
+  //top: -506%; //1170px
+  //right: -250%; //1170px
+  top: -287.4%;
+  right: -184.45%;;
+
+  @include breakpoint-max(xl) {
+    content: none;
+  }
+}
+
+
 .cta__container {
   padding-top: $height;
   padding-bottom: $height;
@@ -102,7 +150,7 @@
 
 .cta__skewed-text {
   position: absolute;
-  z-index: 222;
+//  z-index: 222;
   text-transform: uppercase;
   width: 220%;
   transform: rotate(37.8deg);
@@ -151,7 +199,6 @@
   box-shadow: $button-shadow-rounded;
   border-radius: 100%;
   position: relative;
-  z-index: 1;
   text-transform: uppercase;
   font-family: $secondary;
 
@@ -175,51 +222,5 @@
     z-index: 9999999;
     font-size: 0.5em;
 
-  }
-}
-
-.title::before {
-  width: 0;
-  height: 0;
-  border-top: 14em solid transparent;
-  border-bottom: 14em solid transparent;
-  border-right: 18em solid palette(red, bg);
-  //-moz-border-radius: 50%;
-  //-webkit-border-radius: 50%;
-  border-radius: 100%;
-  content: "";
-  display: inline-block;
-  position: absolute;
-  //outline: 5px solid blue;
-  z-index: -1;
-  //top: -455%; //1170px
-  //right: -200%; //1170px
-  top: -245%;
-  right: -143%;
-
-  @include breakpoint-max(md) {
-    content: none;
-  }
-}
-
-.title::after {
-  width: 0;
-  height: 0;
-  border-top: 16em solid transparent;
-  border-bottom: 16em solid transparent;
-  border-right: 20.5em solid palette(purple, bg);
-  border-radius: 100%;
-  content: "";
-  display: inline-block;
-  position: absolute;
-  //outline: 5px solid blue;
-  z-index: -2;
-  //top: -506%; //1170px
-  //right: -250%; //1170px
-  top: -287.4%;
-  right: -184.45%;;
-
-  @include breakpoint-max(xl) {
-    content: none;
   }
 }
