--- a/sass/elements/_layout.scss
+++ b/sass/elements/_layout.scss
@@ -24,7 +24,7 @@ section {
   @include  make-row();
 
   padding: 0 $line-height;
-  z-index: 2;
+  //z-index: 2;
   position: relative;
 }
 .inner__row--center {
@@ -32,8 +32,7 @@ section {
 
   padding: 0 $line-height;
   align-items: center;
-  z-index: 2;
-  position: relative;
+
 }
 
 .column--1-4 {
