--- a/sass/elements/_subscribe-form.scss
+++ b/sass/elements/_subscribe-form.scss
@@ -34,6 +34,8 @@
   }
   input:placeholder-shown::placeholder {
     color: palette(purple, body);
+    opacity: 0.9;
+    font-style: italic;
   }
 
   input[type=submit] {
