--- a/sass/elements/_why.scss
+++ b/sass/elements/_why.scss
@@ -1,4 +1,1 @@
-.why {
-  z-index: 1;
-  position: relative;
-}
+
